--- a/styles/sass/_contact.scss
+++ b/styles/sass/_contact.scss
@@ -8,34 +8,50 @@
 
 // Start of the Contact Section
 
-.topContact {
+.topHeader {
     background-image: url(../assets/contact1.jpeg);
     background-repeat: no-repeat;
     background-size: cover;
+    height: 200px;
 
     h1 {
-        padding: 100px 0 50px 0;
+        padding: 75px 0 50px 0;
+        width: 20%;
+        position: relative;
     }
-        h3 {
-            padding-bottom: 30px;
+        span{
+            position: absolute;
+            bottom: -20px;
         }
 }
 
-.topContact h1::before {
+.topHeader h1::before {
     content: '';
     display: block;
     border-top: 4px solid $black;
-    width: 3%;
+    width: 15%;
     padding-top: 50px;
 
+}
+
+// Start of Contact Details Section
+
+.secondContactSection {
+    h3 {
+        padding: 150px 0 30px 0;
+    }
+        p {
+            width: 50%;
+            color: lighten($black, 40%);
+        }
 }
 
 // Start of Icon Contact Section
 .iconList {
     display: flex;
     justify-content: space-around;
-    width: 80%;
-    padding: 100px 50px;
+    width: 90%;
+    padding: 100px 0 50px 0;
         i {
             font-size: 3rem;
             padding-bottom: 20px;
@@ -48,23 +64,47 @@
             }
 }
 
+.iconList p,
+address {
+    color: lighten($black, 40%);
+}
+
 // Start of Contact Form - same as on blog
 
 .contactForm {
-    padding: 150px 0 250px 0;
+    padding: 50px 0 250px 0;
         h3 {
             padding-bottom: 30px;
-            border-bottom: 1px solid $black;
-            border-color: lighten($black, 50%);
         }
+            p {
+                padding-bottom: 100px;
+                color: lighten($black, 40%);
+            }
+}
+
+.firstRow input[type="email"]::placeholder {
+    color: $black;
+    opacity: 1;
+}
+
+.firstRow input[type="email"] {
+    border-bottom: 1px solid $black;
+}
+
+.secondRow button[type="submit"] {
+    background-color: $white;
+    border: none;
+    border-bottom: 1px solid $black;
+    padding-bottom: 15px;
 }
 
 // Image Section 
 
 .contentContainer {
-    background-image: url(../assets/contact2.jpeg);background-size: cover;
+    background-image: url(../assets/contact2.jpeg);
+    background-size: cover;
     background-repeat: no-repeat;
-    height: 600px;
+    height: 550px;
     display: block;
 
 }
