--- a/styles/sass/_footer.scss
+++ b/styles/sass/_footer.scss
@@ -3,7 +3,7 @@ footer {
     color: $secondary;
 }
 
-.bottomFooter {
+.footerContainer {
     display: flex;
     justify-content: space-between;
     padding: 150px 0;
@@ -22,33 +22,42 @@ footer {
         }
 }
 
-.recentPosts {
+.secondFooterColumn {
     line-height: 40px;
-        li {
-            list-style: disc;
+        h5 {
+            text-align: center;
         }
-        
+            li {
+                list-style: disc;
+            }
 }
 
-.subscription form {
-    legend {
-        padding: 0 0 30px 0;
-    }
-        button {
-            background: $main;
-            padding: 6.5px 10px;
-            font-size: 2rem;
-            float: left;
+.thirdFooterColumn {
+    display: flex;
+    flex-direction: column;
+        h5 {
+            align-self: flex-end;
         }
-            input[type="email"] {
-                padding: 10px 0 10px 20px;
-                width: 250px;
-                float: left;
-    }
 }
 
+legend {
+    padding: 0 0 30px 0;
+}
 
+.submitContainer {
+    display: flex;
+    justify-content: flex-end;
+        input[type="email"] {
+            padding: 10px 0 10px 20px;
+            width: 250px;       
+        }
+}
 
+button[type="submit"] {
+    background: $main;
+    padding: 6.5px 10px;
+    font-size: 2rem;
+}
 
 .copyright h5  {
     text-align: center;
