--- a/styles/sass/_general.scss
+++ b/styles/sass/_general.scss
@@ -115,10 +115,10 @@ h5 {
 
 }
 
-.index h4,
-.contact h3 {
+.index h4 {
     font-family: $mainFont;
-    letter-spacing: 0.9px;
+    letter-spacing: 1.8px;
+    font-weight: 400;
     line-height: 24px;
     font-size: 2.5rem;
     text-transform: uppercase;
@@ -131,6 +131,15 @@ h5 {
     font-size: 3rem;
     text-transform: uppercase;
     letter-spacing: 0.9px;
+}
+
+.contact h3 {
+    font-family: $secondary;
+    letter-spacing: 1.5px;
+    font-weight: 700;
+    line-height: 24px;
+    font-size: 2.5rem;
+    text-transform: uppercase;
 }
 
 // Buttons & Link Styles
